adds graphics to homepage

--- a/pages/how-to-cite.html
+++ b/pages/how-to-cite.html
@@ -8,10 +8,11 @@ permalink: /how-to-cite
 <html>
     <h1>How to cite</h1>
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
-            Tice AK*, Žihala D*, Pánek T*, Jones RE", Salomaki E", Nenarokov S, Burki F, Eliáš M, Eme L, Roger AJ, Rokas A, Shen X, Strassert JFH, Kolísko M, Brown MW. 2021. PhyloFisher: A phylogenomic package for resolving eukaryotic relationships. [PLoS Biology. 19(8): e3001365](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3001365) * & " =Contributed equally
+            Tice AK*, Žihala D*, Pánek T*, Jones RE", Salomaki E", Nenarokov S, Burki F, Eliáš M, Eme L, Roger AJ, Rokas A, Shen X, Strassert JFH, Kolísko M, Brown MW. 2021. PhyloFisher: A phylogenomic package for resolving eukaryotic relationships. [PLoS Biology. 19(8): e3001365](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3001365) 
         </p>
+        * & " = Contributed equally
     <h1>Third Party Software/Data Included</h1>
-        <p><em>If you use PhyloFisher, please also cite these invaluable resources.</em></p>
+        <em>If you use PhyloFisher, please also cite these invaluable resources.</em>
         
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
             ASTRAL-III (Zhang et al., 2018) - Zhang C, Rabiee M, Sayyari E, Mirarab S. ASTRAL-III: polynomial time species tree reconstruction from partially resolved gene trees. BMC Bioinformatics. 2018;19: 153. doi:10.1186/s12859-018-2129-y
