--- a/pages/index.html
+++ b/pages/index.html
@@ -7,10 +7,23 @@ permalink: /
 
 <html> 
     <body> 
-        <p align="justify", style="text-indent: 36px">
+        <p align="justify">
             PhyloFisher is a software package, written in Python3, that contains a protocol designed for phylogenomic dataset assembly and data exploration. This software package aids in the construction and curation of protein sequence-based phylogenomic datasets, conducts post-assembly analyses, and allows visualization of the results. In addition, PhyloFisher currently includes a manually curated starting dataset of 240 proteins from 304 eukaryotic taxa representing the full breadth of known diversity in the eukaryotic tree of life. Importantly, this dataset also includes identified paralogs of each of the 240 proteins from all investigated taxa which is crucial for the identification of probable orthologs. Although PhyloFisher includes this pan-eukaryotic dataset, the tool is flexible and can work with any dataset consisting of protein sequences derived from eukaryotes. The combination of all of the foregoing features makes PhyloFisher a broadly-useful, user-friendly software tool for sophisticated phylogenomic analyses of eukaryotes.
         <p\>
     </body>
+
+    <h1>Figures</h1>
+    <img src="../assets/images/general-scheme.png" alt="PhyloFisher General Scheme">
+
+    <h1>fisher.py Scheme</h1>
+    <img
+    src="../assets/images/fisher.svg"
+    alt="fisher.py Scheme"
+    height="100%"
+    width="100%" />
+
+    <!-- Horizontal Line -->
+    <hr>
 
     <!-- Badges -->
     <div class="img-container"; align="center">
