changes src path for home page images

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,8 @@ permalink: /
 ---
 
 <html> 
-    <h1>fisher.py Scheme</h1>
     <img
-    src="/assets/images/TREE-PF-LOGO.png"
+    src="https://thebrownlab.github.io/phylofisher-pages/assets/images/TREE-PF-LOGO.png"
     alt="fisher.py Scheme"
     height="50%"
     width="50%" 
@@ -42,13 +41,10 @@ permalink: /
         <p\>
     </body>
 
-    <h1>Figures</h1>
-    <img src="/assets/images/general-scheme.png" alt="PhyloFisher General Scheme">
-
-    <h1>fisher.py Scheme</h1>
+    <h1>PhyloFisher General Scheme</h1>
     <img
-    src="/assets/images/fisher.svg"
-    alt="fisher.py Scheme"
+    src="https://thebrownlab.github.io/phylofisher-pages/assets/images/general-scheme.png"
+    alt="PhyloFisher General Scheme"
     height="100%"
     width="100%" />
 
