add css style sheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,12 +5,17 @@ nav_order: 1
 permalink: /
 ---
 
+
 <html> 
+    <head>
+        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+    </head>
+
     <img
     src="https://thebrownlab.github.io/phylofisher-pages/assets/images/TREE-PF-LOGO.png"
     alt="fisher.py Scheme"
-    height="50%"
-    width="50%" 
+    height="75%"
+    width="90%" 
     class="center"/>
 
     <!-- Badges -->
