fixes path to main.css in index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@ permalink: /
 
 <html> 
     <head>
-        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+        <link type="text/css" rel="stylesheet" href="../stylesheets/main.css" />
     </head>
 
     <img
@@ -19,7 +19,7 @@ permalink: /
     class="center"/>
 
     <!-- Badges -->
-    <div class="img-container"; align="center">
+    <div align="center">
         <!-- Citation Badge -->
         <a href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3001365"><img src="https://img.shields.io/badge/dynamic/json?color=blue&label=Citations&query=times_cited&url=https%3A%2F%2Fmetrics-api.dimensions.ai%2Fdoi%2F10.1371%2Fjournal.pbio.3001365&style=flat-square" /></a>
         <!-- Link to GitHub Badge -->
