--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@ permalink: /
 
 <html> 
     <head>
-        <link type="text/css" rel="stylesheet" href="../stylesheets/main.css" />
+        <link type="text/css" rel="stylesheet" href=".https://thebrownlab.github.io/phylofisher-pages/stylesheets/main.css" />
     </head>
 
     <img
