updates page order

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,4 +42,17 @@ permalink: /
         <p\>
     </body>
     
+    <h1>PhyloFisher General Scheme</h1>
+    <img
+    src="https://thebrownlab.github.io/phylofisher-pages/assets/images/general-scheme.png"
+    alt="PhyloFisher General Scheme"
+    height="100%"
+    width="100%" />
+
+    <h1>fisher.py Scheme</h1>
+    <img
+    src="https://thebrownlab.github.io/phylofisher-pages/assets/images/fisher.svg"
+    alt="fisher.py Scheme"
+    height="100%"
+    width="100%" />
 </html>
