update aa_recoder documentation

--- a/pages/references.html
+++ b/pages/references.html
@@ -29,6 +29,12 @@ permalink: /references
             Fu, L., Niu, B., Zhu, Z., Wu, S., & Li, W. (2012). CD-HIT: Accelerated for clustering the next-generation sequencing data. Bioinformatics, 28(23), 3150–3152. https://doi.org/10.1093/bioinformatics/bts565
         </p>
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
+            Feuda R, Dohrmann M, Pett W, Philippe H, Rota-Stabelli O, Lartillot N, Wörheide G, Pisani D. Improved Modeling of Compositional Heterogeneity Supports Sponges as Sister to All Other Animals. Curr Biol. 2017 Dec 18;27(24):3864-3870.e4. doi: 10.1016/j.cub.2017.11.008. Epub 2017 Nov 30. PMID: 29199080.
+        </p>
+        <p align="justify", style="text-indent: -36px; padding-left: 36px;">
+            Hernandez AM, Ryan JF. Six-State Amino Acid Recoding is not an Effective Strategy to Offset Compositional Heterogeneity and Saturation in Phylogenetic Analyses. Syst Biol. 2021 Oct 13;70(6):1200-1212. doi: 10.1093/sysbio/syab027. PMID: 33837789; PMCID: PMC8513762.
+        </p>
+        <p align="justify", style="text-indent: -36px; padding-left: 36px;">
             Huerta-Cepas, J., Serra, F., & Bork, P. (2016). ETE 3: Reconstruction, Analysis, and Visualization of Phylogenomic Data. Molecular Biology and Evolution, 33(6), 1635–1638. https://doi.org/10.1093/molbev/msw046
         </p>
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
@@ -36,6 +42,9 @@ permalink: /references
         </p>
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
             Katoh, K., & Standley, D. M. (2013). MAFFT multiple sequence alignment software version 7: Improvements in performance and usability. Molecular Biology and Evolution, 30(4), 772–780. https://doi.org/10.1093/molbev/mst010
+        </p>
+        <p align="justify", style="text-indent: -36px; padding-left: 36px;">
+            Kosiol C, Goldman N, Buttimore NH. A new criterion and method for amino acid classification. J Theor Biol. 2004 May 7;228(1):97-106. doi: 10.1016/j.jtbi.2003.12.010. PMID: 15064085.
         </p>
         <p align="justify", style="text-indent: -36px; padding-left: 36px;">
             Lopez, P., Casane, D., & Philippe, H. (2002). Heterotachy, an Important Process of Protein Evolution. Molecular Biology and Evolution, 19(1), 1–7. https://doi.org/10.1093/ oxfordjournals.molbev.a003973
