Update index.html, add Google Scholar link

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@ class="center"/>
         <ul>
             <li>David Žihala, PhD - <a href="https://scholar.google.com/citations?user=jTL1c6QAAAAJ&hl=en">Google Scholar</a></li>
             <li>Robert Jones - <a href="https://scholar.google.com/citations?user=pQeUuoIAAAAJ&hl=en">Google Scholar</a></li>
-            <li>Serafim Nenarokov</li>
+            <li>Serafim Nenarokov - <a href="https://scholar.google.ru/citations?user=maAnfhQAAAAJ&hl=en">Google Scholar</a></li>
         </ul>
         
     <h3>Tree Thinkers</h3>
