adds current protocols citation

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,8 +36,12 @@ class="center"/>
 
 <h2>How to Cite</h2>
     <p align="justify", style="text-indent: -36px; padding-left: 36px;">
-        Tice AK*, Žihala D*, Pánek T*, Jones RE", Salomaki E", Nenarokov S, Burki F, Eliáš M, Eme L, Roger AJ, Rokas A, Shen X, Strassert JFH, Kolísko M, Brown MW. 2021. PhyloFisher: A phylogenomic package for resolving eukaryotic relationships. [PLoS Biology. 19(8): e3001365](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3001365) 
+        Tice AK*, Žihala D*, Pánek T*, Jones RE", Salomaki E", Nenarokov S, Burki F, Eliáš M, Eme L, Roger AJ, Rokas A, Shen X, Strassert JFH, Kolísko M, Brown MW. 2021. PhyloFisher: A phylogenomic package for resolving eukaryotic relationships. PLoS Biology, 19(8), e3001365. https://doi.org/10.1371/journal.pbio.3001365
     </p>
+    <p align="justify", style="text-indent: -36px; padding-left: 36px;">
+        Jones RE, Tice AK, Eliáš M, Eme L, Kolísko M, Nenarokov S, Pánek T, Rokas A, Salomaki E, Strassert JFH, Shen XX, Žihala D, & Brown MW. 2024. Create, Analyze, and Visualize Phylogenomic Datasets Using PhyloFisher. Current Protocols, 4(1), e969. https://doi.org/10.1002/cpz1.969
+    </p>
+
     <p>* & " = Contributed equally</p>
 
 <h2>Authors</h2>
@@ -45,7 +49,7 @@ class="center"/>
     <h3>Software Developers</h3>
         <ul>
             <li>David Žihala, PhD - <a href="https://scholar.google.com/citations?user=jTL1c6QAAAAJ&hl=en">Google Scholar</a></li>
-            <li>Robert Jones - <a href="https://scholar.google.com/citations?user=pQeUuoIAAAAJ&hl=en">Google Scholar</a></li>
+            <li>Robert Jones, PhD - <a href="https://scholar.google.com/citations?user=pQeUuoIAAAAJ&hl=en">Google Scholar</a></li>
             <li>Serafim Nenarokov - <a href="https://scholar.google.ru/citations?user=maAnfhQAAAAJ&hl=en">Google Scholar</a></li>
         </ul>
         
