updates author names

--- a/pages/index.html
+++ b/pages/index.html
@@ -49,13 +49,13 @@ class="center"/>
     <h3>Software Developers</h3>
         <ul>
             <li>David Žihala, PhD - <a href="https://scholar.google.com/citations?user=jTL1c6QAAAAJ&hl=en">Google Scholar</a></li>
-            <li>Robert Jones, PhD - <a href="https://scholar.google.com/citations?user=pQeUuoIAAAAJ&hl=en">Google Scholar</a></li>
+            <li>Robert E. Jones, PhD - <a href="https://scholar.google.com/citations?user=pQeUuoIAAAAJ&hl=en">Google Scholar</a></li>
             <li>Serafim Nenarokov - <a href="https://scholar.google.ru/citations?user=maAnfhQAAAAJ&hl=en">Google Scholar</a></li>
         </ul>
         
     <h3>Tree Thinkers</h3>
         <ul>
-            <li>Alexander K Tice, PhD - <a href="https://scholar.google.cz/citations?user=4jR5i0sAAAAJ&hl=en">Google Scholar</a></li>
+            <li>Alexander K. Tice, PhD - <a href="https://scholar.google.cz/citations?user=4jR5i0sAAAAJ&hl=en">Google Scholar</a></li>
             <li>Eric Salomaki, PhD - <a href="https://scholar.google.com/citations?user=u0M3ySEAAAAJ&hl=en">Google Scholar</a></li>
         </ul>
 
